custom.css
.m-t-100{
	margin-top: 100px;
}

.container, .no-left-margin{
	margin-left: 0px;
}

.info{
	background-color: #f5f5f5;
}
.myName{
	padding-top: 10px;
	font-size: 25px;
}

.myAvatar{
	text-align: center;
	padding-top: 20px;
}

.myContact{
	text-align: center;
	padding-top: 15px;

}

#linkedinImage:hover{
	cursor: pointer;
}

.bio{
	padding-left: 30px;
	margin-bottom: 20px;
}

.subProject{
	margin-left: 20px;
}

.videoTitle {
	margin-top: 20px;
}

iframe {
	width: 420px;
	height: 315px;
}

@media only screen and (max-width: 500px) {
  iframe {
	  width: 320px;
	  height: 210px;
  }
}

@media only screen and (min-width: 501px) {
  iframe {
	  width: 420px;
	  height: 315px;
  }
}

